--- a/Notebook1.ipynb
+++ b/Notebook1.ipynb
@@ -2,15 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "id": "fa585902-70b6-4291-857b-ce2417225b3b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package wordnet to /home/reroes/nltk_data...\n",
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\RAUL\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     },
@@ -20,19 +23,102 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import nltk\n",
+    "import mlflow\n",
+    "import mlflow.sklearn\n",
+    "\n",
+    "# Configurar el tracking URI para MlFlow\n",
+    "mlflow.set_tracking_uri(\"http://localhost:9090\")\n",
+    "\n",
+    "# Iniciar un nuevo experimento\n",
+    "mlflow.set_experiment(\"Logistic Regression Experiment\")\n",
     "nltk.download('wordnet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
+   "id": "e1755002-883e-4771-933e-eeebde9848bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivo descomprimido con éxito\n"
+     ]
+    }
+   ],
+   "source": [
+    "import zipfile\n",
+    "\n",
+    "# Ruta al archivo zip\n",
+    "zip_file_path = 'C:/Users/RAUL/clase006/data/training.1600000.processed.noemoticon.csv.zip'\n",
+    "# Ruta de extracción\n",
+    "extract_path = 'C:/Users/RAUL/clase006/data'\n",
+    "\n",
+    "# Descomprimir el archivo\n",
+    "with zipfile.ZipFile(zip_file_path, 'r') as zip_ref:\n",
+    "    zip_ref.extractall(extract_path)\n",
+    "\n",
+    "print(\"Archivo descomprimido con éxito\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "cefec9d6-f808-4653-9dd8-d646356fbaa0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\RAUL\\clase006\\data\\training.1600000.processed.noemoticon.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "file_path = os.path.abspath('data/training.1600000.processed.noemoticon.csv')\n",
+    "print(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "7fa62180-d6e1-41f3-b887-60d0d19a9d87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir('C:/Users/RAUL/clase006')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "963540a0-1f6d-4ebd-8d46-3d105d59b3c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "DATASET_COLUMNS = [\"sentiment\", \"ids\", \"date\", \"flag\", \"user\", \"text\"]\n",
+    "DATASET_ENCODING = \"ISO-8859-1\"\n",
+    "file_path = 'C:/Users/RAUL/clase006/data/training.1600000.processed.noemoticon.csv'\n",
+    "dataset = pd.read_csv(file_path, encoding=DATASET_ENCODING, names=DATASET_COLUMNS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "id": "9c6f4479-62ae-404e-81f8-198b85a4577e",
    "metadata": {},
    "outputs": [],
@@ -65,15 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c5fb3330-5dc5-464c-ace3-87617c0e0b02",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "id": "c8d37dd6-d948-41c2-92af-567e025fd009",
    "metadata": {},
    "outputs": [],
@@ -87,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "id": "71abb159-dae4-458b-8ec1-b534ea3c0ff6",
    "metadata": {},
    "outputs": [
@@ -255,7 +333,7 @@
        "[1600000 rows x 6 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,17 +344,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
    "id": "230a4e50-28e0-4954-a6b3-8e55761df107",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 4])"
+       "array([0, 4], dtype=int64)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 59,
    "id": "56acd3ec-50d0-4b54-893c-767a9791a0d5",
    "metadata": {},
    "outputs": [
@@ -295,7 +373,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_167314/3511654355.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\RAUL\\AppData\\Local\\Temp\\ipykernel_21640\\3511654355.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -313,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 60,
    "id": "9e2b5947-52b6-4f20-b5af-ef44cc64f80f",
    "metadata": {},
    "outputs": [
@@ -338,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "id": "d74dd5ae-1d8d-42c3-a5d5-ca2f5b88701b",
    "metadata": {},
    "outputs": [],
@@ -373,10 +451,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 62,
    "id": "26125b87-0b5c-43ab-a33c-bd370ac83fbd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:9: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "<>:9: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "C:\\Users\\RAUL\\AppData\\Local\\Temp\\ipykernel_21640\\2426161746.py:9: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "  userPattern       = '@[^\\s]+'\n"
+     ]
+    }
+   ],
    "source": [
     "def preprocess(textdata):\n",
     "    processedText = []\n",
@@ -422,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "id": "367e673b-6afa-4a85-b5ad-01ddfa981a19",
    "metadata": {},
    "outputs": [
@@ -431,7 +520,7 @@
      "output_type": "stream",
      "text": [
       "Text Preprocessing complete.\n",
-      "Time Taken: 46 seconds\n"
+      "Time Taken: 69 seconds\n"
      ]
     }
    ],
@@ -445,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 64,
    "id": "47605ec8-f805-4a69-9aef-9a577b3589eb",
    "metadata": {},
    "outputs": [
@@ -465,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 65,
    "id": "94abcb96-a32d-420c-8e34-813b0f7d76fe",
    "metadata": {},
    "outputs": [
@@ -487,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 66,
    "id": "19a5f7db-8927-46c3-a1c2-ec5dd990c1ab",
    "metadata": {},
    "outputs": [
@@ -507,7 +596,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 68,
+   "id": "7e3e2196-3555-4f53-a433-a1cfc27ea951",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Experiment: artifact_location='mlflow-artifacts:/2', creation_time=1716045904094, experiment_id='2', last_update_time=1716045904094, lifecycle_stage='active', name='ClasificacionTexto', tags={}>"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlflow.set_tracking_uri(\"http://127.0.0.1:9090\")\n",
+    "mlflow.set_experiment(experiment_name=\"ClasificacionTexto\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "id": "4c4fa945-45bd-4557-8c94-d956854ed89e",
    "metadata": {},
    "outputs": [],
@@ -525,29 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "7e3e2196-3555-4f53-a433-a1cfc27ea951",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Experiment: artifact_location='/home/reroes/tmp-aa2024/herramientas-ia/clase06/mlflow-artifacts/3', creation_time=1715662943949, experiment_id='3', last_update_time=1715662943949, lifecycle_stage='active', name='ClasificacionTexto', tags={}>"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mlflow.set_tracking_uri(\"http://127.0.0.1:5000\")\n",
-    "mlflow.set_experiment(experiment_name=\"ClasificacionTexto\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 70,
    "id": "83ddd06b-418e-46ed-99ff-ca0d744cd279",
    "metadata": {},
    "outputs": [],
@@ -568,6 +657,22 @@
     "    \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abd840be-bba4-46f0-b2bd-2893ad2a93f0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cfee40d-c8d5-4f1d-80f0-1ee3241eaf10",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -586,7 +691,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
